RECASTBOTS-1 : Initialization - status management

--- a/src/java/fr/paris/lutece/plugins/recastbots/resources/recastbots_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/recastbots/resources/recastbots_messages.properties
@@ -86,3 +86,5 @@ info.recastbot.created=RecastBot created
 info.recastbot.updated=RecastBot updated
 info.recastbot.removed=RecastBot removed
 
+bot_status.enabled=Enabled
+bot_status.disabled= Disabled
