RECASTBOTS-1 : Initialization - language management

--- a/webapp/WEB-INF/conf/plugins/recastbots.properties
+++ b/webapp/WEB-INF/conf/plugins/recastbots.properties
@@ -1,6 +1,3 @@
-# {plugin.pluginName} properties file
+# recastbots properties file
 
-#######################################################################################################
-# Default Labels for XPage
-recastbots.pageTitle=recastbots
-recastbots.pagePathLabel=recastbots
+recastbots.languages=en,fr
