--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>plugin-recastbots</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <name>Lutece recastbots plugin</name>
 
@@ -64,13 +64,14 @@
     <properties>
         <componentName>recastbots</componentName>
         <jiraProjectName>RECASTBOTS</jiraProjectName>
-        <jiraComponentId></jiraComponentId>
+        <jiraComponentId />
     </properties>
     
     <scm>
         <connection>scm:git:https://github.com/lutece-platform/lutece-chat-plugin-recastbots.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-platform/lutece-chat-plugin-recastbots.git</developerConnection>
         <url>https://github.com/lutece-platform/lutece-chat-plugin-recastbots.git</url>
-    </scm>
+      <tag>plugin-recastbots-1.0.0</tag>
+  </scm>
 
 </project>
